fixed bottom margin to include more spacing

--- a/styles/projects.css
+++ b/styles/projects.css
@@ -86,7 +86,7 @@
     margin: 4.5rem 0 0 0;
     grid-template-columns: repeat(1, 1fr);
     grid-row-gap: 2%;
-    margin-bottom: 40rem;
+    margin-bottom: 60rem;
     width: 100%;
   }
   .project-text-container {
